--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -1,6 +1,11 @@
 {
   "module": {
     "name": "entry",
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET"
+      }
+    ],
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
